Minor fix to get file listings to display with the correct white space, while still being centered on the page.

--- a/templates/Elegant/styles.css
+++ b/templates/Elegant/styles.css
@@ -768,16 +768,17 @@ td.diffdeleted, del {
 
 /* @group file.tmpl */
 
-#contents {
+#file #content {
+	text-align: center;
+}
+
+#file #content #contents {
+	text-align: left;
 	margin: 0 auto;
-	display: table;
+	display: inline-block;
 }
 
-#contents .geshi {
-	display: inline;
-}
-
-#contents pre {
+#file #content #contents pre {
 	white-space: pre-wrap;
 }
 
